Add new modules: Premium Pack and Premium Pack Product

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # # Development
 # VITE_CRACKERS=http://localhost:3000/api/v1
 # VITE_AZAIRE=http://localhost:4000/api/v1
-# VITE_ORGANIZATION=Enter Dev Organization Id
+# VITE_ORGANIZATION=7664406abdbd239
 
 # Production
 VITE_CRACKERS=https://api.crackers.azairecloud.com/api/v1
